--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="bootstrap.css">
 <title>This is a page title</title>
 </head>
 
 <body>
+  
+  
 This is some content.
+  
+  <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Fluid jumbotron</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  </div>
+</div>
 </body>
 
 </html>
